--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	</style>
 </head>
 <body>
-	<img src="C:\Users\Abhinav\Downloads\logocopy.jpg" align="left" width="350px" height="80px">
-	<img src="C:\Users\Abhinav\Downloads\call.jpg" align="right" width="100px" height="50px">
+	<img src="C:\Users\Abhinav\Documents\EvoTech\images\logocopy.jpg" align="left" width="350px" height="80px">
+	<img src="C:\Users\Abhinav\Documents\EvoTech\images\call.jpg" align="right" width="100px" height="50px">
 	<header style="text-align:center"><h1>DMRC</h1></header>
 	<br>
 	<br>
