--- a/hddx.html
+++ b/hddx.html
@@ -41,14 +41,29 @@
 
   <!-- Full-width images with number and caption text -->
   <div class="mySlides fade">
-    <div class="numbertext">1 / 2</div>
+    <div class="numbertext">1 / 5</div>
     <img src="C:\Users\MY PC\myapp\views\metro.jpg" style="width:100%">
     <div class="text"></div>
   </div>
 
   <div class="mySlides fade">
-    <div class="numbertext">2 / 2</div>
+    <div class="numbertext">2 / 5</div>
     <img src="C:\Users\MY PC\myapp\views\new1.jpg" style="width:100%">
+    <div class="text"></div>
+  </div>
+<div class="mySlides fade">
+    <div class="numbertext">3 / 5</div>
+    <img src="C:\Users\MY PC\myapp\views\LAJPATNAGRimage.jpg" style="width:100%">
+    <div class="text"></div>
+  </div>
+<div class="mySlides fade">
+    <div class="numbertext">4 / 5</div>
+    <img src="C:\Users\MY PC\myapp\views\banner3_31518.jpg" style="width:100%">
+    <div class="text"></div>
+  </div>
+<div class="mySlides fade">
+    <div class="numbertext">5 / 5</div>
+    <img src="C:\Users\MY PC\myapp\views\banner311018_1.jpg" style="width:100%">
     <div class="text"></div>
   </div>
 
@@ -62,6 +77,9 @@
 <div style="text-align:center">
   <span class="dot" onclick="currentSlide(1)"></span>
   <span class="dot" onclick="currentSlide(3)"></span>
+ <span class="dot" onclick="currentSlide(2)"></span>
+<span class="dot" onclick="currentSlide(4)"></span>
+<span class="dot" onclick="currentSlide(5)"></span>
 </div>
 <style>
  {box-sizing:border-box}
@@ -175,11 +193,157 @@ function showSlides() {
   setTimeout(showSlides, 2000); // Change image every 2 seconds
 }
 </script>
-<section class = "metro intro" style = "max-width:600px" align= center>
-<aside>
-For implementation and subsequent operation of Delhi MRTS, a company under the name DELHI METRO RAIL CORPORATION was registered on 03-05-95 under the Companies Act, 1956. DMRC has equal equity participation from GOI and GNCTD.
+<style>
+.float-left-area  {
+		  width: 70%;
+		  float: left;
+		  }
 
-<h4>About DMRC</h4>
+.float-right-area {
+		  width: 30%;
+		  float: left;
+		  }
+
+.inner-left	  {
+		  padding: 5px 5px 5px 5px;
+		  margin-right: 100px;
+ 		   margin-left: 100px;
+		  min-height: 60px;
+		  }
+
+.inner-right	  {
+		  font-size: 11px;
+		  padding: 5px 5px 5px 5px;
+		  min-height: 60px;
+		  }
+
+.clear-floated	  { clear: both; height: 1px; font-size: 1px; line-height: 1px; padding: 0; margin: 0; }
+</style>
+<style>
+.custom-select {
+  position: relative;
+  font-family: Arial;
+}
+
+.custom-select select {
+  display: none; /*hide original SELECT element: */
+}
+
+.select-selected {
+  background-color: grey ;
+}
+
+/* Style the arrow inside the select element: */
+.select-selected:after {
+  position: absolute;
+  content: "";
+  top: 14px;
+  right: 10px;
+  width: 0;
+  height: 0;
+  border: 6px solid transparent;
+  border-color: #fff transparent transparent transparent;
+}
+
+/* Point the arrow upwards when the select box is open (active): */
+.select-selected.select-arrow-active:after {
+  border-color: transparent transparent #fff transparent;
+  top: 7px;
+}
+
+/* style the items (options), including the selected item: */
+.select-items div,.select-selected {
+  color: #ffffff;
+  padding: 8px 16px;
+  border: 1px solid transparent;
+  border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
+  cursor: pointer;
+}
+
+/* Style items (options): */
+.select-items {
+  position: absolute;
+  background-color: grey;
+  top: 100%;
+  left: 0;
+  right: 0;
+  z-index: 99;
+}
+
+/* Hide the items when the select box is closed: */
+.select-hide {
+  display: none;
+}
+
+.select-items div:hover, .same-as-selected {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+</style>
+<style>
+.custom-select1{
+  position: relative;
+  font-family: Arial;
+}
+
+.custom-select1 select {
+  display: none; /*hide original SELECT element: */
+}
+
+.select-selected {
+  background-color: grey ;
+}
+
+/* Style the arrow inside the select element: */
+.select-selected:after {
+  position: absolute;
+  content: "";
+  top: 14px;
+  right: 10px;
+  width: 0;
+  height: 0;
+  border: 6px solid transparent;
+  border-color: #fff transparent transparent transparent;
+}
+
+/* Point the arrow upwards when the select box is open (active): */
+.select-selected.select-arrow-active:after {
+  border-color: transparent transparent #fff transparent;
+  top: 7px;
+}
+
+/* style the items (options), including the selected item: */
+.select-items div,.select-selected {
+  color: #ffffff;
+  padding: 8px 16px;
+  border: 1px solid transparent;
+  border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
+  cursor: pointer;
+}
+
+/* Style items (options): */
+.select-items {
+  position: absolute;
+  background-color: grey;
+  top: 100%;
+  left: 0;
+  right: 0;
+  z-index: 99;
+}
+
+/* Hide the items when the select box is closed: */
+.select-hide {
+  display: none;
+}
+
+.select-items div:hover, .same-as-selected {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+</style>
+
+<div class="float-left-area">
+<div class="inner-left" align = justify>
+<h1><font face= "Viner Hand ITC" size = 20> Metro For All ... </font ></h1>
+For implementation and subsequent operation of Delhi MRTS, a company under the name DELHI METRO RAIL CORPORATION was registered on 03-05-95 under the Companies Act, 1956. DMRC has equal equity participation from GOI and GNCTD.
 
 <p>The Delhi Metro has been instrumental in ushering in a new era in the sphere of mass urban transportation in India. The swanky and modern Metro system introduced comfortable, air conditioned and eco-friendly services for the first time in India and completely revolutionized the mass transportation scenario not only in the National Capital Region but the entire country.
 				</p>
@@ -221,7 +385,199 @@ For implementation and subsequent operation of Delhi MRTS, a company under the n
 				</ul>
 
 				
-</aside>
-</section>
+</div>
+</div>
 
+<div class="float-right-area">
+<div class="inner-right">
+<h2><font face = "Viner Hand ITC" size = 20 >  Plan your trip </font></h2>
+<div class="custom-select" style="width:300px;">
+  <select>
+    <option value="0">Select Source:</option>
+    <option value="1"> 1st place</option>
+    <option value="2">second </option>
+    <option value="3">third</option>
+    <option value="4">forth</option>
+    <option value="5">third</option>
+    <option value="6">sd</option>
+    <option value="7">dsf</option>
+    <option value="8">wfc</option>
+    <option value="9">ewf</option>
+    <option value="10">ewfsdcf</option>
+    <option value="11">wer345</option>
+    <option value="12">dfca</option>
+  </select>
+</div>
+<p>
+
+</p>
+<div class="custom-select1" style="width:300px;">
+  <select>
+    <option value="0">Select destination:</option>
+    <option value="1"> 1st place</option>
+    <option value="2">second </option>
+    <option value="3">third</option>
+    <option value="4">forth</option>
+    <option value="5">third</option>
+    <option value="6">sd</option>
+    <option value="7">dsf</option>
+    <option value="8">wfc</option>
+    <option value="9">ewf</option>
+    <option value="10">ewfsdcf</option>
+    <option value="11">wer345</option>
+    <option value="12">dfca</option>
+  </select>
+</div>
+</div>
+</div>
+
+<div class="clear-floated"></div>
+<script>
+var x, i, j, selElmnt, a, b, c;
+/*look for any elements with the class "custom-select":*/
+x = document.getElementsByClassName("custom-select");
+for (i = 0; i < x.length; i++) {
+  selElmnt = x[i].getElementsByTagName("select")[0];
+  /*for each element, create a new DIV that will act as the selected item:*/
+  a = document.createElement("DIV");
+  a.setAttribute("class", "select-selected");
+  a.innerHTML = selElmnt.options[selElmnt.selectedIndex].innerHTML;
+  x[i].appendChild(a);
+  /*for each element, create a new DIV that will contain the option list:*/
+  b = document.createElement("DIV");
+  b.setAttribute("class", "select-items select-hide");
+  for (j = 1; j < selElmnt.length; j++) {
+    /*for each option in the original select element,
+    create a new DIV that will act as an option item:*/
+    c = document.createElement("DIV");
+    c.innerHTML = selElmnt.options[j].innerHTML;
+    c.addEventListener("click", function(e) {
+        /*when an item is clicked, update the original select box,
+        and the selected item:*/
+        var y, i, k, s, h;
+        s = this.parentNode.parentNode.getElementsByTagName("select")[0];
+        h = this.parentNode.previousSibling;
+        for (i = 0; i < s.length; i++) {
+          if (s.options[i].innerHTML == this.innerHTML) {
+            s.selectedIndex = i;
+            h.innerHTML = this.innerHTML;
+            y = this.parentNode.getElementsByClassName("same-as-selected");
+            for (k = 0; k < y.length; k++) {
+              y[k].removeAttribute("class");
+            }
+            this.setAttribute("class", "same-as-selected");
+            break;
+          }
+        }
+        h.click();
+    });
+    b.appendChild(c);
+  }
+  x[i].appendChild(b);
+  a.addEventListener("click", function(e) {
+      /*when the select box is clicked, close any other select boxes,
+      and open/close the current select box:*/
+      e.stopPropagation();
+      closeAllSelect(this);
+      this.nextSibling.classList.toggle("select-hide");
+      this.classList.toggle("select-arrow-active");
+    });
+}
+function closeAllSelect(elmnt) {
+  /*a function that will close all select boxes in the document,
+  except the current select box:*/
+  var x, y, i, arrNo = [];
+  x = document.getElementsByClassName("select-items");
+  y = document.getElementsByClassName("select-selected");
+  for (i = 0; i < y.length; i++) {
+    if (elmnt == y[i]) {
+      arrNo.push(i)
+    } else {
+      y[i].classList.remove("select-arrow-active");
+    }
+  }
+  for (i = 0; i < x.length; i++) {
+    if (arrNo.indexOf(i)) {
+      x[i].classList.add("select-hide");
+    }
+  }
+}
+/*if the user clicks anywhere outside the select box,
+then close all select boxes:*/
+document.addEventListener("click", closeAllSelect);
+</script>
+<script>
+var x, i, j, selElmnt, a, b, c;
+/*look for any elements with the class "custom-select1":*/
+x = document.getElementsByClassName("custom-select1");
+for (i = 0; i < x.length; i++) {
+  selElmnt = x[i].getElementsByTagName("select")[0];
+  /*for each element, create a new DIV that will act as the selected item:*/
+  a = document.createElement("DIV");
+  a.setAttribute("class", "select-selected");
+  a.innerHTML = selElmnt.options[selElmnt.selectedIndex].innerHTML;
+  x[i].appendChild(a);
+  /*for each element, create a new DIV that will contain the option list:*/
+  b = document.createElement("DIV");
+  b.setAttribute("class", "select-items select-hide");
+  for (j = 1; j < selElmnt.length; j++) {
+    /*for each option in the original select element,
+    create a new DIV that will act as an option item:*/
+    c = document.createElement("DIV");
+    c.innerHTML = selElmnt.options[j].innerHTML;
+    c.addEventListener("click", function(e) {
+        /*when an item is clicked, update the original select box,
+        and the selected item:*/
+        var y, i, k, s, h;
+        s = this.parentNode.parentNode.getElementsByTagName("select")[0];
+        h = this.parentNode.previousSibling;
+        for (i = 0; i < s.length; i++) {
+          if (s.options[i].innerHTML == this.innerHTML) {
+            s.selectedIndex = i;
+            h.innerHTML = this.innerHTML;
+            y = this.parentNode.getElementsByClassName("same-as-selected");
+            for (k = 0; k < y.length; k++) {
+              y[k].removeAttribute("class");
+            }
+            this.setAttribute("class", "same-as-selected");
+            break;
+          }
+        }
+        h.click();
+    });
+    b.appendChild(c);
+  }
+  x[i].appendChild(b);
+  a.addEventListener("click", function(e) {
+      /*when the select box is clicked, close any other select boxes,
+      and open/close the current select box:*/
+      e.stopPropagation();
+      closeAllSelect(this);
+      this.nextSibling.classList.toggle("select-hide");
+      this.classList.toggle("select-arrow-active");
+    });
+}
+function closeAllSelect(elmnt) {
+  /*a function that will close all select boxes in the document,
+  except the current select box:*/
+  var x, y, i, arrNo = [];
+  x = document.getElementsByClassName("select-items");
+  y = document.getElementsByClassName("select-selected");
+  for (i = 0; i < y.length; i++) {
+    if (elmnt == y[i]) {
+      arrNo.push(i)
+    } else {
+      y[i].classList.remove("select-arrow-active");
+    }
+  }
+  for (i = 0; i < x.length; i++) {
+    if (arrNo.indexOf(i)) {
+      x[i].classList.add("select-hide");
+    }
+  }
+}
+/*if the user clicks anywhere outside the select box,
+then close all select boxes:*/
+document.addEventListener("click", closeAllSelect);
+</script>
 </html>	
