--- a/hddx1.html
+++ b/hddx1.html
@@ -1,6 +1,7 @@
+<!DOCTYPE html>
 <html>
 <head>
- <img src = "C:\Users\MY PC\Desktop\caring-disabled-person-handicapped-image_csp58221474.jpg" ></img src>
+ <img src = "./main.jpg"  ></img src>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <div class="icon-bar">
@@ -42,28 +43,28 @@
   <!-- Full-width images with number and caption text -->
   <div class="mySlides fade">
     <div class="numbertext">1 / 5</div>
-    <img src="C:\Users\MY PC\myapp\views\metro.jpg" style="width:100%">
+    <img src="./metro.jpg" style="width:100%">
     <div class="text"></div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">2 / 5</div>
-    <img src="C:\Users\MY PC\myapp\views\new1.jpg" style="width:100%">
+    <img src="./new1.jpg" style="width:100%">
     <div class="text"></div>
   </div>
 <div class="mySlides fade">
     <div class="numbertext">3 / 5</div>
-    <img src="C:\Users\MY PC\myapp\views\LAJPATNAGRimage.jpg" style="width:100%">
+    <img src="./LAJPATNAGRimage.jpg" style="width:100%">
     <div class="text"></div>
   </div>
 <div class="mySlides fade">
     <div class="numbertext">4 / 5</div>
-    <img src="C:\Users\MY PC\myapp\views\banner3_31518.jpg" style="width:100%">
+    <img src="./banner3_31518.jpg" style="width:100%">
     <div class="text"></div>
   </div>
 <div class="mySlides fade">
     <div class="numbertext">5 / 5</div>
-    <img src="C:\Users\MY PC\myapp\views\banner311018_1.jpg" style="width:100%">
+    <img src="./banner311018_1.jpg" style="width:100%">
     <div class="text"></div>
   </div>
 
@@ -82,7 +83,6 @@
 <span class="dot" onclick="currentSlide(5)"></span>
 </div>
 <style>
- {box-sizing:border-box}
 
 /* Slideshow container */
 .slideshow-container {
@@ -338,6 +338,16 @@ function showSlides() {
 .select-items div:hover, .same-as-selected {
   background-color: rgba(0, 0, 0, 0.1);
 }
+.main input[type="submit"] {
+			width: 100%;
+			padding: 15px;
+			background-color: #535b63;
+			border: 0;
+			box-sizing: border-box;
+			cursor: pointer;
+			font-weight: bold;
+			color: #ffffff;
+		}
 </style>
 
 <div class="float-left-area">
@@ -366,7 +376,7 @@ For implementation and subsequent operation of Delhi MRTS, a company under the n
 					The Delhi Metro has also contributed tremendously on the environment front by becoming the first ever railway project in the world to claim carbon credits for regenerative braking. DMRC has also been certified by the United Nations (UN) as the first Metro Rail and Rail based system in the world to get carbon Credits for reducing Green House gas emissions as it has helped to reduce pollution levels in the city by 6.3 lakh tons every year thus helping in reducing global warming.
 				</p>
 				<p>
-					It has also set up roof top solar power plants at many of its stations. All stations of the presently under construction corridors are being constructed as green buildings. In the present phase of Delhi Metro’s construction, the DMRC is nearing the completion of 160 kilometres of Metro lines which has woven a web of Metro corridors along the city’s Ring Road besides connecting with many other localities in NOIDA, Ghaziabad, Bahadurgarh and Ballabhgarh.
+					It has also set up roof top solar power plants at many of its stations. All stations of the presently under construction corridors are being constructed as green buildings. In the present phase of Delhi Metroï¿½s construction, the DMRC is nearing the completion of 160 kilometres of Metro lines which has woven a web of Metro corridors along the cityï¿½s Ring Road besides connecting with many other localities in NOIDA, Ghaziabad, Bahadurgarh and Ballabhgarh.
 				</p>
 				<p>
 					Apart from providing Delhites with a comfortable public transport option, the Delhi Metro is also contributing significantly towards controlling pollution as well as reducing vehicular congestion on the roads.
@@ -393,19 +403,31 @@ For implementation and subsequent operation of Delhi MRTS, a company under the n
 <h2><font face = "Viner Hand ITC" size = 20 >  Plan your trip </font></h2>
 <div class="custom-select" style="width:300px;">
   <select>
-    <option value="0">Select Source:</option>
-    <option value="1"> 1st place</option>
-    <option value="2">second </option>
-    <option value="3">third</option>
-    <option value="4">forth</option>
-    <option value="5">third</option>
-    <option value="6">sd</option>
-    <option value="7">dsf</option>
-    <option value="8">wfc</option>
-    <option value="9">ewf</option>
-    <option value="10">ewfsdcf</option>
-    <option value="11">wer345</option>
-    <option value="12">dfca</option>
+      <option value ="0">Select Source:</option>
+      <option value="1">Shaheed Sthal(New Bus Adda)</option>
+      <option value="2">Dilshad Garden</option>
+      <option value="3">	Shahdara</option>
+      <option value="4">Welcome</option>
+      <option value="5">Kashmere Gate</option>
+      <option value="6">Kohat Enclave</option>
+      <option value="7">Pitam Pura</option>
+      <option value="8">Adarsh Nagar</option>
+      <option value="9">G.T.B. Nagar</option>
+      <option value="10">Chandni Chowk</option>
+      <option value="11">New Delhi</option>
+      <option value="12">Rajiv Chowk</option>
+      <option value="13">AIIMS</option>
+      <option value="14">Malviya Nagar</option>
+      <option value="15">Qutab Minar</option>
+      <option value="16">Inder Lok</option>
+      <option value="17">Ashok Park Main</option>
+      <option value="18">Punjabi Bagh</option>
+      <option value="19">Shivaji Park</option>
+      <option value="20">Paschim Vihar (East)</option>
+      <option value="21">Paschim Vihar (West)</option>
+      <option value="22">Peera Garhi</option>
+      <option value="23">Udyog Nagar</option>
+      <option value="24">Nangloi Rly Station</option>  
   </select>
 </div>
 <p>
@@ -413,21 +435,39 @@ For implementation and subsequent operation of Delhi MRTS, a company under the n
 </p>
 <div class="custom-select1" style="width:300px;">
   <select>
-    <option value="0">Select destination:</option>
-    <option value="1"> 1st place</option>
-    <option value="2">second </option>
-    <option value="3">third</option>
-    <option value="4">forth</option>
-    <option value="5">third</option>
-    <option value="6">sd</option>
-    <option value="7">dsf</option>
-    <option value="8">wfc</option>
-    <option value="9">ewf</option>
-    <option value="10">ewfsdcf</option>
-    <option value="11">wer345</option>
-    <option value="12">dfca</option>
+    <option value ="0">Select destination:</option>
+      <option value="1">Shaheed Sthal(New Bus Adda)</option>
+      <option value="2">Dilshad Garden</option>
+      <option value="3">	Shahdara</option>
+      <option value="4">Welcome</option>
+      <option value="5">Kashmere Gate</option>
+      <option value="6">Kohat Enclave</option>
+      <option value="7">Pitam Pura</option>
+      <option value="8">Adarsh Nagar</option>
+      <option value="9">G.T.B. Nagar</option>
+      <option value="10">Chandni Chowk</option>
+      <option value="11">New Delhi</option>
+      <option value="12">Rajiv Chowk</option>
+      <option value="13">AIIMS</option>
+      <option value="14">Malviya Nagar</option>
+      <option value="15">Qutab Minar</option>
+      <option value="16">Inder Lok</option>
+      <option value="17">Ashok Park Main</option>
+      <option value="18">Punjabi Bagh</option>
+      <option value="19">Shivaji Park</option>
+      <option value="20">Paschim Vihar (East)</option>
+      <option value="21">Paschim Vihar (West)</option>
+      <option value="22">Peera Garhi</option>
+      <option value="23">Udyog Nagar</option>
+      <option value="24">Nangloi Rly Station</option>  
   </select>
 </div>
+<div class = "main" >
+ <form action= "log" method = "POST" ><p>   
+
+</p>
+        <input type="submit">
+</form>
 </div>
 </div>
 
