--- a/hddx1.html
+++ b/hddx1.html
@@ -6,10 +6,9 @@
 
 <div class="icon-bar">
   <a class="active" href="#"><i class="fa fa-home"></i></a>
-  <a href="#"><i class="fa fa-search"></i></a>
-  <a href="#"><i class="fa fa-envelope"></i></a>
-  <a href="#"><i class="fa fa-globe"></i></a>
-  <a href="#"><i class="fa fa-trash"></i></a>
+  <a href="http://www.delhimetrorail.com/Zoom_Map.aspx"><i class="fa fa-search"></i></a>
+  <a href="https://mail.google.com"><i class="fa fa-envelope"></i></a>
+  <a href="https://google.com"><i class="fa fa-globe"></i></a>
 </div>
 <style>
 .icon-bar {
@@ -21,7 +20,7 @@
 .icon-bar a {
   float: left; /* Float links side by side */
   text-align: center; /* Center-align text */
-  width: 20%; /* Equal width (5 icons with 20% width each = 100%) */
+  width: 25%; /* Equal width (5 icons with 20% width each = 100%) */
   padding: 12px 0; /* Some top and bottom padding */
   transition: all 0.3s ease; /* Add transition for hover effects */
   color: white; /* White text color */
