--- a/page3.html
+++ b/page3.html
@@ -7,11 +7,10 @@
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
    <div class="icon-bar">
-     <a class="active" href="#"><i class="fa fa-home"></i></a>
-     <a href="#"><i class="fa fa-search"></i></a>
-     <a href="#"><i class="fa fa-envelope"></i></a>
-     <a href="#"><i class="fa fa-globe"></i></a>
-     <a href="#"><i class="fa fa-trash"></i></a>
+     <a class="active" href="./hddx1.html"><i class="fa fa-home"></i></a>
+     <a href="http://www.delhimetrorail.com/Zoom_Map.aspx"><i class="fa fa-search"></i></a>
+     <a href="https://mail.google.com"><i class="fa fa-envelope"></i></a>
+     <a href="https://google.com"><i class="fa fa-globe"></i></a>
    </div>
    <style>
    .icon-bar {
@@ -19,164 +18,193 @@
      background-color: #555; /* Dark-grey background */
      overflow: auto; /* Overflow due to float */
    }
-
    .icon-bar a {
      float: left; /* Float links side by side */
      text-align: center; /* Center-align text */
-     width: 20%; /* Equal width (5 icons with 20% width each = 100%) */
+     width: 25%; /* Equal width (5 icons with 20% width each = 100%) */
      padding: 12px 0; /* Some top and bottom padding */
      transition: all 0.3s ease; /* Add transition for hover effects */
      color: white; /* White text color */
      font-size: 36px; /* Increased font size */
    }
-
    .icon-bar a:hover {
      background-color: #000; /* Add a hover color */
    }
-
    .active {
      background-color: #4CAF50; /* Add an active/current color */
    }
    </style>
 
    <style>
-   .custom-select {
-     position: relative;
-     font-family: Arial;
-   }
+.custom-select {
+  position: relative;
+  font-family: Arial;
+}
 
-   .custom-select select {
-     display: none; /*hide original SELECT element: */
-   }
+.custom-select select {
+  display: none; /*hide original SELECT element: */
+}
 
-   .select-selected {
-     background-color: grey ;
-   }
+.select-selected {
+  background-color: grey ;
+}
 
-   /* Style the arrow inside the select element: */
-   .select-selected:after {
-     position: absolute;
-     content: "";
-     top: 14px;
-     right: 10px;
-     width: 0;
-     height: 0;
-     border: 6px solid transparent;
-     border-color: #fff transparent transparent transparent;
-   }
+/* Style the arrow inside the select element: */
+.select-selected:after {
+  position: absolute;
+  content: "";
+  top: 14px;
+  right: 10px;
+  width: 0;
+  height: 0;
+  border: 6px solid transparent;
+  border-color: #fff transparent transparent transparent;
+}
 
-   /* Point the arrow upwards when the select box is open (active): */
-   .select-selected.select-arrow-active:after {
-     border-color: transparent transparent #fff transparent;
-     top: 7px;
-   }
+/* Point the arrow upwards when the select box is open (active): */
+.select-selected.select-arrow-active:after {
+  border-color: transparent transparent #fff transparent;
+  top: 7px;
+}
 
-   /* style the items (options), including the selected item: */
-   .select-items div,.select-selected {
-     color: #ffffff;
-     padding: 8px 16px;
-     border: 1px solid transparent;
-     border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
-     cursor: pointer;
-   }
+/* style the items (options), including the selected item: */
+.select-items div,.select-selected {
+  color: #ffffff;
+  padding: 8px 16px;
+  border: 1px solid transparent;
+  border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
+  cursor: pointer;
+}
 
-   /* Style items (options): */
-   .select-items {
-     position: absolute;
-     background-color: grey;
-     top: 100%;
-     left: 0;
-     right: 0;
-     z-index: 99;
-   }
+/* Style items (options): */
+.select-items {
+  position: absolute;
+  background-color: grey;
+  top: 100%;
+  left: 0;
+  right: 0;
+  z-index: 99;
+}
 
-   /* Hide the items when the select box is closed: */
-   .select-hide {
-     display: none;
-   }
+/* Hide the items when the select box is closed: */
+.select-hide {
+  display: none;
+}
 
-   .select-items div:hover, .same-as-selected {
-     background-color: rgba(0, 0, 0, 0.1);
-   }
-   </style>
-   <style>
-   .custom-select1{
-     position: relative;
-     font-family: Arial;
-   }
+.select-items div:hover, .same-as-selected {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+</style>
+<style>
+.custom-select1{
+  position: relative;
+  font-family: Arial;
+}
 
-   .custom-select1 select {
-     display: none; /*hide original SELECT element: */
-   }
+.custom-select1 select {
+  display: none; /*hide original SELECT element: */
+}
 
-   .select-selected {
-     background-color: grey ;
-   }
+.select-selected {
+  background-color: grey ;
+}
 
-   /* Style the arrow inside the select element: */
-   .select-selected:after {
-     position: absolute;
-     content: "";
-     top: 14px;
-     right: 10px;
-     width: 0;
-     height: 0;
-     border: 6px solid transparent;
-     border-color: #fff transparent transparent transparent;
-   }
+/* Style the arrow inside the select element: */
+.select-selected:after {
+  position: absolute;
+  content: "";
+  top: 14px;
+  right: 10px;
+  width: 0;
+  height: 0;
+  border: 6px solid transparent;
+  border-color: #fff transparent transparent transparent;
+}
 
-   /* Point the arrow upwards when the select box is open (active): */
-   .select-selected.select-arrow-active:after {
-     border-color: transparent transparent #fff transparent;
-     top: 7px;
-   }
+/* Point the arrow upwards when the select box is open (active): */
+.select-selected.select-arrow-active:after {
+  border-color: transparent transparent #fff transparent;
+  top: 7px;
+}
 
-   /* style the items (options), including the selected item: */
-   .select-items div,.select-selected {
-     color: #ffffff;
-     padding: 8px 16px;
-     border: 1px solid transparent;
-     border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
-     cursor: pointer;
-   }
+/* style the items (options), including the selected item: */
+.select-items div,.select-selected {
+  color: #ffffff;
+  padding: 8px 16px;
+  border: 1px solid transparent;
+  border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
+  cursor: pointer;
+}
 
-   /* Style items (options): */
-   .select-items {
-     position: absolute;
-     background-color: grey;
-     top: 100%;
-     left: 0;
-     right: 0;
-     z-index: 99;
-   }
+/* Style items (options): */
+.select-items {
+  position: absolute;
+  background-color: grey;
+  top: 100%;
+  left: 0;
+  right: 0;
+  z-index: 99;
+}
 
-   /* Hide the items when the select box is closed: */
-   .select-hide {
-     display: none;
-   }
+/* Hide the items when the select box is closed: */
+.select-hide {
+  display: none;
+}
 
-   .select-items div:hover, .same-as-selected {
-     background-color: rgba(0, 0, 0, 0.1);
-   }
+.select-items div:hover, .same-as-selected {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+.main input[type="submit"] {
+			width: 100%;
+			padding: 15px;
+			background-color: #535b63;
+			border: 0;
+			box-sizing: border-box;
+			cursor: pointer;
+			font-weight: bold;
+			color: #ffffff;
+		}
+</style>
 
-   </style>
+<style>
+.float-left-area  {
+		  width: 30%;
+		  float: left;
+		  }
 
+.float-right-area {
+		  width: 70%;
+		  float: left;
+		  }
+
+.inner-left	  {
+		  padding: 5px 5px 5px 5px;
+		  margin-right: 100px;
+ 		   margin-left: 10px;
+		  min-height: 60px;
+		  }
+
+.inner-right	  {
+		  font-size: 11px;
+		  padding: 5px 5px 5px 5px;
+		  min-height: 60px;
+		  }
+
+.clear-floated	  { clear: both; height: 1px; font-size: 1px; line-height: 1px; padding: 0; margin: 0; }
+</style>
    <style>
    .display{
    	padding-top: 20px;
    	padding-bottom: 20px;
    }
-
    .journey{
      float: right;
      width:35%;
    }
-
    .travel{
      flaot: right;
      width: 35%;
    }
-
    </style>
    <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
    <script src="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
@@ -189,15 +217,12 @@
    	});
     hideShow();
    }
-
    function hideShow(){
      var x = document.getElementById("map");
       if (x.style.display === "none") {
         x.style.display = "block";
       }
    }
-
-
     function hideShow1(){
         var x = document.getElementById("map1");
          if (x.style.display === "none") {
@@ -206,11 +231,9 @@
            x.style.display = "none";
          }
       }
-
    function callback(lat,lon) {
    	document.getElementById('latitude').innerHTML = lat;
    	document.getElementById('longitude').innerHTML = lon;
-
    document.getElementById('curr_loCoord').value = lat+","+lon;
    }
    </script>
@@ -221,73 +244,85 @@
     <!-- <div id="map2" style="display: block" onclick="hideShow1()"><div class="mapouter"><div class="gmap_canvas"><iframe width="100%" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=28.675692899999998%2C77.112627&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.utilitysavingexpert.com">Utility Saving Expert</a></div><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div>
     </div> -->
 
-
-    <div id="map" style="display: none" onclick="hideShow()"><div class="mapouter"><div class="gmap_canvas"><iframe width="100%" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=bvcoe&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.utilitysavingexpert.com">Utility Saving Expert</a></div><style>.mapouter{position:relative;text-align:right;height:500px;width:500p}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:500px;}</style></div>
+<div class="float-left-area">
+<div class="inner-left" align = justify>
+   <div id="map" style="display: none" onclick="hideShow()"><div class="mapouter"><div class="gmap_canvas"><iframe width="100%" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=bvcoe&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.utilitysavingexpert.com">Utility Saving Expert</a></div><style>.mapouter{position:relative;text-align:right;height:500px;width:500p}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:500px;}</style></div>
     </div>
+        </div>
+</div>
+<div class="float-right-area">
+<div class="inner-right">
   <div class="journey">
     <h1>Plan your journey</h1>
     <form class="travel" action="drive.html" method="post">
       <button type="button" name="curr-loc" onclick="javascript:showlocation()">Get your location</button>
       <p></p>
-      <div class="custom-select" style="width:300px;">
-          <select>
-            <option value="0">Dilshad Garden</option>
-            <option value="1">Shahdara</option>
-            <option value="2">Welcome</option>
-            <option value="3">Kashmere Gate</option>
-            <option value="4">Kohat Enclave</option>
-            <option value="5">Pitam Pura</option>
-            <option value="6">Adarsh Nagar</option>
-            <option value="7">Chandni Chowk</option>
-            <option value="8">New Delhi</option>
-            <option value="9">Rajiv Chowk</option>
-            <option value="10">AIIMS</option>
-            <option value="11">Malviya Nagar</option>
-            <option value="12">Qutab Minar</option>
-            <option value="13">Inder Lok</option>
-            <option value="14">Ashok Park Main</option>
-            <option value="15">Punjabi Bagh</option>
-            <option value="16">Shivaji Park</option>
-            <option value="17">Paschim Vihar (East)</option>
-            <option value="18">Paschim Vihar (West)</option>
-            <option value="19">Peera Garhi</option>
-            <option value="20">Udyog Nagar</option>
-            <option value="21">Nangloi Rly Station</option>
-          </select>
-        </div>
-        <p>
+<div class="custom-select" style="width:300px;">
+  <select>
+      <option value ="0">Select Source:</option>
+      <option value="1">Shaheed Sthal(New Bus Adda)</option>
+      <option value="2">Dilshad Garden</option>
+      <option value="3">	Shahdara</option>
+      <option value="4">Welcome</option>
+      <option value="5">Kashmere Gate</option>
+      <option value="6">Kohat Enclave</option>
+      <option value="7">Pitam Pura</option>
+      <option value="8">Adarsh Nagar</option>
+      <option value="9">G.T.B. Nagar</option>
+      <option value="10">Chandni Chowk</option>
+      <option value="11">New Delhi</option>
+      <option value="12">Rajiv Chowk</option>
+      <option value="13">AIIMS</option>
+      <option value="14">Malviya Nagar</option>
+      <option value="15">Qutab Minar</option>
+      <option value="16">Inder Lok</option>
+      <option value="17">Ashok Park Main</option>
+      <option value="18">Punjabi Bagh</option>
+      <option value="19">Shivaji Park</option>
+      <option value="20">Paschim Vihar (East)</option>
+      <option value="21">Paschim Vihar (West)</option>
+      <option value="22">Peera Garhi</option>
+      <option value="23">Udyog Nagar</option>
+      <option value="24">Nangloi Rly Station</option>  
+  </select>
+</div>
+<p>
 
-        </p>
-        <div class="custom-select1" style="width:300px;">
-          <select>
-            <option value="0">Dilshad Garden</option>
-            <option value="1">Shahdara</option>
-            <option value="2">Welcome</option>
-            <option value="3">Kashmere Gate</option>
-            <option value="4">Kohat Enclave</option>
-            <option value="5">Pitam Pura</option>
-            <option value="6">Adarsh Nagar</option>
-            <option value="7">Chandni Chowk</option>
-            <option value="8">New Delhi</option>
-            <option value="9">Rajiv Chowk</option>
-            <option value="10">AIIMS</option>
-            <option value="11">Malviya Nagar</option>
-            <option value="12">Qutab Minar</option>
-            <option value="13">Inder Lok</option>
-            <option value="14">Ashok Park Main</option>
-            <option value="15">Punjabi Bagh</option>
-            <option value="16">Shivaji Park</option>
-            <option value="17">Paschim Vihar (East)</option>
-            <option value="18">Paschim Vihar (West)</option>
-            <option value="19">Peera Garhi</option>
-            <option value="20">Udyog Nagar</option>
-            <option value="21">Nangloi Rly Station</option>
-          </select>
+</p>
+<div class="custom-select1" style="width:300px;">
+  <select>
+    <option value ="0">Select destination:</option>
+      <option value="1">Shaheed Sthal(New Bus Adda)</option>
+      <option value="2">Dilshad Garden</option>
+      <option value="3">	Shahdara</option>
+      <option value="4">Welcome</option>
+      <option value="5">Kashmere Gate</option>
+      <option value="6">Kohat Enclave</option>
+      <option value="7">Pitam Pura</option>
+      <option value="8">Adarsh Nagar</option>
+      <option value="9">G.T.B. Nagar</option>
+      <option value="10">Chandni Chowk</option>
+      <option value="11">New Delhi</option>
+      <option value="12">Rajiv Chowk</option>
+      <option value="13">AIIMS</option>
+      <option value="14">Malviya Nagar</option>
+      <option value="15">Qutab Minar</option>
+      <option value="16">Inder Lok</option>
+      <option value="17">Ashok Park Main</option>
+      <option value="18">Punjabi Bagh</option>
+      <option value="19">Shivaji Park</option>
+      <option value="20">Paschim Vihar (East)</option>
+      <option value="21">Paschim Vihar (West)</option>
+      <option value="22">Peera Garhi</option>
+      <option value="23">Udyog Nagar</option>
+      <option value="24">Nangloi Rly Station</option>  
+  </select>
         </form>
   </div>
+
 <p></p>
   <button type="button" name="submit">Submit</button>
-
+</div></div>
   <script>
   var x, i, j, selElmnt, a, b, c;
   /*look for any elements with the class "custom-select":*/
